--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,15 @@
         <artifactId>spring-webmvc</artifactId>
         <version>5.1.9.RELEASE</version>
     </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.28</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>5.1.9.RELEASE</version>
+        </dependency>
   </dependencies>
 </project>
